--- a/sitedu/index.html
+++ b/sitedu/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link href="img/mouse.png" rel="icon">
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<title>Eduardo Perez</title>
@@ -15,16 +16,16 @@
 		<img src="img/logo.jpg">
 	</a>
 	  <ul>
-	  	<li><a href="sobre">Sobre Mim</a></li>
-	  	<li><a href="">Especialidades</a></li>
-	  	<li><a href="">Trabalhos e Hobbyes</a></li>
-	  	<li><a href="">Entre em Contato</a></li>
+	  	<li><a href="#sobre">Sobre Mim</a></li>
+	  	<li><a href="#especialidades">Especialidades</a></li>
+	  	<li><a href="#trabalhos">Trabalhos e Hobbyes</a></li>
+	  	<li><a href="Contato">Entre em Contato</a></li>
 	  </ul>	
 	</nav>
 	<header>
 			<h1>Eduardo Perez<h1>
             <p>Curriculo Online</p>
-            <a class="botao" href="https://www.etecmcm.com.br/">Cursando</a>
+            <a class="botao" href="https://github.com/Eduardoperez69463?tab=repositories">Git Hub</a>
 	</header>
 	<div class="container">
 		<section id="sobre">
@@ -45,6 +46,93 @@
 				
 			</div>
 		</section>
+		<section id="especialidades">
+			<h2>Especialidades</h2>
+			<div>
+				<img src="img/comp.png">
+				<h3>Estudante em ensino técnico para informática</h3>
+				<p>É feita nesssa parte um estudo focado em aprender coisas como: programação, criação de sites, arte digital, criação de banco de dados, familiarização com as diversas interfaces do computador e os fundamentos da informática.</p>
+			</div>
+			<div>
+				<img src="img/forc.png">
+				<h3>Curiosidade em como resolver problemas</h3>
+				<p>Tenho curiosidade e determinção para resolver problemas, não ficando contento até encontar uma solução satisfatória.</p>
+			</div>
+			<div>
+				<img src="img/deter.png">
+				<h3>Força de vontade</h3>
+				<p>Com o objetivo de sempre buscar mais conhecimento mesmo nas dificuldades e cada vez mais aprender a fazer coisas novas e evoluir.</p>
+			</div>
+			<div>
+				<img src="img/prog.png">
+				<h3>Afinidade em programação</h3>
+				<p>Meu maior interesse dentre as áreas da informática é a programação ,querendo entender mais e mais os códigos em diversas linguagens de programação.</p>
+			</div>
+		</section>
+		<section id="competencias">
+			<h2>Minhas Maiores Competências Socioemocionais</h2>
+			<h3><a href="docs/eixoscompetencias.pdf">Veja aqui</a> quais são todas as competências socioemocionais pela BNCC</h3>
+			<div class="comp">
+				<img src="img/compet.png">
+				<p>Me considero  uma pessoa intusiasmada principalmente a novos problemas mesmo sendo grandes, os quais eu sempre tento resolver de forma correta dentro do que me hábilito sendo que tendo a tomar a iniciativa de dar uma boa resposta a eles.  </p>
+			</div>
+			<div class="comp">
+				<img src="img/compet1.png">
+				<p>Sou uma pessoa organizada e com muita determinação que não deixa as responsabilidades de lado,com foco nas situações não dessistindologo de começo,procurando chegar onde for preciso mesmo com as dificuldades. </p>
+			</div>
+			<div class="comp">
+				<img src="img/compet2.png">
+				<p>Sou uma pessoa que sempre estará aberta e  á procura de aprender novas coisas, muitas vezes com uma boa facilidade de adaptação e tento sempre trazer mais do que o básico da maneira mais criativa possivel.</p>
+			</div>
+			
+
+<!--<h2 id="trabalhos">Alguns dos meus trabalhos - sites</h2>
+			<div class="comp">
+				<a href="#"><img src="img/compet2.png"></a>
+			</div>
+			<div class="comp">
+				<a href="#"><img src="img/compet2.png"></a>
+			</div>
+			<div class="comp">
+				<a href="#"><img src="img/compet2.png"></a>
+			</div>
+		</section>
+		<section>
+			<h2>coisas qu eu gosto de fazer</h2>
+			<div class="hobby">
+				<p></p>
+				<iframe width="80%" height="300"src=""></iframe>>
+			</div>
+			<div class="hobby">
+				<h3></h3>
+				<iframe width="80%" height="300" src=""></iframe>
+			<div class="hobby">
+				<h3></h3>
+				<iframe width="80%" height="300" src=""></iframe>
+			</div>
+
+	
+		</section>-->
+
+	<section id="contato">
+		<h2>para me contratar</h2>
+		<p>esses são meus contatos </p>
+		<div>
+			<!--<img src="img/wat.png" alt="fone">-->
+			<p><a href=" tel:11942320224">whatsapp</a></p>
+		</div>
+		<div>
+			<!--<img src="img/gith.png" alt="email">-->
+			<p><a href="https://github.com/Eduardoperez69463?tab=repositories">github</a></p>
+		</div>
+		<div>
+			<!--<img src="img/gm.png" alt="github">-->
+			<p><a href="mailto:eduardo.m.p.freitas@gmail.com">gmail</a></p>
+		</div>
+	</section>
+			<footer>
+				<p>desenvolvido por Eduardo Perez</p>
+			</footer>
 	</div>
 
 </body>
